--- a/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
+++ b/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
@@ -1,11 +1,11 @@
 ANTISNIPER: 0 # Не трогать
 CURRENCY: $ # Не трогать
-DATABASE: bot_database # [ИМЯ_БД] из пункта выше
+DATABASE: auction # [ИМЯ_БД] из пункта выше
 HELP: help.mp4 # Название видео для помощи в папке static
 HOST: localhost # хост базы данных, если просто на локальной машине, то оставить
 LOGO: logo.jpeg # Название файла с логотипом в папке static
 LOOSE_NOTIFICATION: true # Не трогать
-PASSWORD: Bot12321~ # пароль от  базы данных
+PASSWORD: admin # пароль от  базы данных
 SETTINGS:
   en: 'Auction rules
 
@@ -15,4 +15,6 @@ SETTINGS:
 STEP: 1,5,10,50,100,200 # Не трогать
 USER: root # пользователь в базе данных, не трогать
 WIN_NOTIFICATION: true # Не трогать
-bot_token: 6828077541:AAErPOrOjQFfiYlf_itRNNEPIwU0kT8-c5I # API токен для бота
+bot_token: 7463078749:AAFwQSv23QMZPRlzE4R3S-R4hON8IcRZj7Q # API токен для бота 
+CRYPTO_PAY_TOKEN: 14700:AATC0ICMvNqTDIIcm9nwrerxCvV8nD8bqWh
+PAY_EXPARATION: 43200 # Время на оплату лота
