--- a/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
+++ b/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
@@ -10,11 +10,9 @@ LOOSE_NOTIFICATION: true
 PASSWORD: admin
 PAY_EXPARATION: 400
 SETTINGS:
-  en: 'Auction rules
-
-    English'
-  ru: "\u041F\u0440\u0430\u0432\u0438\u043B\u0430 \u0430\u0443\u043A\u0446\u0438\u043E\
-    \u043D\u0430\n\u041D\u0430 \u0440\u0443\u0441\u0441\u043A\u043E\u043C"
+  en: English shhshshsgsh
+  ru: "\u0420\u0443\u0441\u0441\u043A\u0438\u0438\u0439 \u043B\u044B\u043E\u0432\u043E\
+    \u0432\u043E\u0442\u0432"
 STEP: 1,5,10,50,100,200
 USER: root
 WIN_NOTIFICATION: true
