--- a/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
+++ b/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
@@ -2,12 +2,12 @@ ANTISNIPER: 40
 ANTISNIPER_FIX: 300
 CRYPTO_PAY_TOKEN: 14700:AATC0ICMvNqTDIIcm9nwrerxCvV8nD8bqWh
 CURRENCY: $
-DATABASE: auction
+DATABASE: bot_database
 HELP: help.mp4
 HOST: localhost
 LOGO: logo.jpeg
 LOOSE_NOTIFICATION: true
-PASSWORD: admin
+PASSWORD: Bot12321~
 PAY_EXPARATION: 400
 SETTINGS:
   en: English shhshshsgsh
@@ -16,4 +16,4 @@ SETTINGS:
 STEP: 1,5,10,50,100,200
 USER: root
 WIN_NOTIFICATION: true
-bot_token: 7463078749:AAFwQSv23QMZPRlzE4R3S-R4hON8IcRZj7Q
+bot_token: 6792768624:AAGupMWtphlk68PUaEPAfWS_D_jNrnLmi2A
