--- a/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
+++ b/AuctionTg (4)/AuctionTg/bot/app/data/config.yaml
@@ -2,18 +2,18 @@ ANTISNIPER: 40
 ANTISNIPER_FIX: 300
 CRYPTO_PAY_TOKEN: 220937:AA6OspEySodIfQiyfXipXqhZP6rFN5Utabq
 CURRENCY: $
-DATABASE: auction
+DATABASE: bot_database
 HELP: help.mp4
 HOST: localhost
 LOGO: logo.jpeg
 LOOSE_NOTIFICATION: true
-PASSWORD: admin
+PASSWORD: Bot12321~
 PAY_EXPARATION: 400
 SETTINGS:
   en: English shhshshsgsh
   ru: "\u0420\u0443\u0441\u0441\u043A\u0438\u0438\u0439 \u043B\u044B\u043E\u0432\u043E\
     \u0432\u043E\u0442\u0432"
 STEP: 1,5,10,50,100,200
-USER: arsen00531
+USER: root
 WIN_NOTIFICATION: true
-bot_token: 7463078749:AAFwQSv23QMZPRlzE4R3S-R4hON8IcRZj7Q
+bot_token: 6828077541:AAErPOrOjQFfiYlf_itRNNEPIwU0kT8-c5I
